# lens-exercises

./: README.md  lens-exercises.cabal
src/: Exercises.hs  FoldsAndTraversalsExercises.hs  LensesExercises.hs  PrismsExercises.hs
test/: FoldsAndTraversalsSpec.hs  LensesSpec.hs  PrismsSpec.hs
