name:                lens-exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lens-exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lens-exercises
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  ghc-options:         -Wall
  exposed-modules:     LensesExercises
                     , PrismsExercises
  build-depends:       base >= 4.7 && <5
                     , lens
                     , aeson
                     , lens-aeson
                     , aeson-qq
                     , text
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && <5
                     , lens
                     , aeson
                     , lens-aeson
                     , aeson-qq
                     , text
                     , vector
                     , hspec
                     , lens-exercises
  default-language:    Haskell2010
  other-modules:       LensesSpec
                     , PrismsSpec
  build-tool-depends:  hspec-discover:hspec-discover == 2.*